--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,11 +1,15 @@
 html,
 body {
   padding: 0;
-  margin: 0;
+  margin: 0 1%;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
-
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 a {
   color: inherit;
   text-decoration: none;
