--- a/styles/NavBarMobile.css
+++ b/styles/NavBarMobile.css
@@ -15,7 +15,7 @@
   color: white;
   font-size: 1.5em;
   margin-top: 7px;
-  width: 30%;
+  width: 100%;
 }
 .MobileMenuItems {
   width: 90%;
@@ -30,4 +30,10 @@
 .NavMobileItem {
   margin: 20px;
   color: white;
+}
+
+@media all and(max-width:920px){
+  .NavMobileContainer{
+    width:100%;
+  }
 }
