--- a/styles/LinkCard.css
+++ b/styles/LinkCard.css
@@ -5,7 +5,7 @@
   align-items: center;
   height: 350px;
   width: 25%;
-  box-shadow: 0px 0px 4px black;
+  box-shadow: 0px 0px 8px rgb(107, 221, 4);
   margin: 30px;
   padding: 30px;
 }
@@ -38,6 +38,24 @@
   background-color: rgba(150, 150, 150, 0.7);
 }
 
+.CardContainer:hover .seeMore{
+  animation: animation 2s ease-in infinite;
+}
+
+@keyframes animation{
+   0%{
+    transform: scale(1);
+   }25%
+   {
+      transform: scale(0.9);
+   }50%{
+      transform: scale(1);
+   }75%{
+    transform: scale(0.9);
+   }100%{
+    transform: scale(1);
+   }
+}
 @media all and (max-width:920px){
   .CardContainer{
     width:50%;
