--- a/styles/NavBar.css
+++ b/styles/NavBar.css
@@ -6,7 +6,6 @@
   height: 40px;
   background-color: rgb(107, 221, 4);
   margin-top: 10px;
-  border-bottom-left-radius: 60px;
 }
 .NavItems {
   display: flex;
@@ -18,28 +17,36 @@
   color: white;
 }
 
+.NavItem{
+  color:white;
+  padding: 7px 25px;
+}
+
 .underItemsContainer {
   margin: 10px 0;
   display: none;
   padding: 5px;
   transition: all ease-in 2s;
-  background-color: rgb(100, 100, 100);
-  width: 105%;
+  background-color: rgb(107, 221, 4);
+  width: 115%;
   position: relative;
   z-index: 2;
+  border-top: white 4px solid;
 }
 #ProduitText {
   margin: 0;
 }
 .underItem {
   margin: 12px;
-  border-bottom: dotted 1px white;
+  padding: 2px 10px;
+  border-bottom: dotted 2px white;
 }
+
 .ProduitItem:hover .underItemsContainer {
   display: block;
 }
 .ProduitItem:hover {
-  margin-top: 175px;
+  margin-top: 200px;
 }
 .ProduitItem:hover #ProduitText {
   text-align: center;
@@ -55,4 +62,10 @@
     display: block;
     width:100%;
   }
+}
+.NavItem:hover, .underItem:hover{
+   box-shadow: 0px 6px 6px rgba(245, 245, 245, 0.603) inset;  
+}
+.NavItem:active{
+  box-shadow: 0px 6px 6px white inset;
 }
