--- a/styles/ProductCard.css
+++ b/styles/ProductCard.css
@@ -5,7 +5,7 @@
   justify-content: space-around;
   width: 25%;
   height: 350px;
-  box-shadow: 0px 0px 4px black;
+  box-shadow: 0px 0px 8px rgb(107, 221, 4);
   margin: 30px;
   padding: 10px;
 }
