--- a/styles/Banniere.module.css
+++ b/styles/Banniere.module.css
@@ -41,7 +41,7 @@
           height: 300px;
       }
       .TextContainer{
-          margin-top: 0;
+          margin-top: -40px;
           width:100%;
       }
       .title{
